# family-platform

./: 01_Budget_and_Financial_Planning.md  02_House_Chores_and_Activities.md  CLAUDE.md  README.md  docker-compose.yml
api/: .env.example  .gitignore  config.py  database.py  main.py  pyproject.toml  requirements.txt
api/alembic/: env.py
api/alembic/versions/: 001_initial_schema.py
api/auth/: deps.py  local.py  supabase_jwt.py
api/models/: transaction.py  user.py
api/routers/: auth.py  transactions.py
api/schemas/: auth.py  transaction.py
docs/: 03_Marriage_Planning.md  04_Platform_Analysis_and_Roadmap.md
family-platform/: middleware.ts  package-lock.json  package.json  pnpm-lock.yaml
family-platform/app/: layout.tsx  page.tsx
family-platform/app/(auth)/login/: page.tsx
family-platform/app/(dashboard)/: layout.tsx
family-platform/app/(dashboard)/budget/: page.tsx
family-platform/app/api/transactions/: route.ts
family-platform/app/api/transactions/[id]/: route.ts
family-platform/app/dashboard/: layout.tsx  page.tsx
family-platform/app/dashboard/budget/: page.tsx
family-platform/components/budget/: BalanceSummary.tsx  TransactionForm.tsx  TransactionList.tsx
family-platform/components/dashboard/: UserInfo.tsx
family-platform/components/ui/: Button.tsx  SignOutButton.tsx
family-platform/lib/: api-client.ts  token.ts  types.ts
family-platform/supabase/migrations/: 001_initial.sql
