[project]
name = "family-platform-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "alembic>=1.15",
    "bcrypt>=4.0",
    "fastapi>=0.115",
    "httpx>=0.28",
    "pydantic-settings>=2.0",
    "pydantic[email]>=2.0",
    "pyjwt>=2.10",
    "sqlalchemy>=2.0",
    "uvicorn[standard]>=0.34",
]
